# SEM_BLIMP

./: README.md  joystick_test.py
Client/: CMakeLists.txt  blimp.c
Server/: blimp_server.py
test/esc/: CMakeLists.txt  esc.c
test/led/: CMakeLists.txt  led_test.c
test/servo/: CMakeLists.txt  servo.c
